Bug 96105 - GCC not consistent on whether no_unique_address array is an empty data member
Summary: GCC not consistent on whether no_unique_address array is an empty data member
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 11.0
: P3 normal
Target Milestone: 10.2
Assignee: Jason Merrill
URL:
Keywords: accepts-invalid, rejects-valid, wrong-code
Depends on:
Blocks:
 
Reported: 2020-07-07 22:30 UTC by Hubert Tong
Modified: 2020-08-04 17:36 UTC (History)
6 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2020-07-07 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hubert Tong 2020-07-07 22:30:34 UTC
GCC treats an array marked `no_unique_address` and whose base element type is an empty class as not an empty data member in `C` but does treat such an array as an empty data member in `A` for the purposes of `B`. It appears that GCC's handling of `B` is erroneous.

Compiler Explorer link: https://godbolt.org/z/XX5W3v

### SOURCE (<stdin>):
struct Empty {};

struct A {
  Empty emp [[no_unique_address]][3];
};

struct B : A {
  float f;
};

struct C {
  Empty emp [[no_unique_address]][3];
  float f;
};

extern char szc[sizeof(C)];
extern char szc[sizeof(float) * 2];  // GCC likes this
extern char szb[sizeof(B)];
extern char szb[sizeof(float) * 2];  // GCC does not like this


### COMPILER INVOCATION:
g++ -fsyntax-only -std=c++2a -Wall -Wextra -pedantic-errors -xc++ -


### ACTUAL OUTPUT:
<stdin>:19:13: error: conflicting declaration 'char szb [8]'
<stdin>:18:13: note: previous declaration as 'char szb [4]'


### EXPECTED OUTPUT:
(clean compile)


### COMPILER VERSION INFO (g++ -v):
Using built-in specs.
COLLECT_GCC=/opt/wandbox/gcc-head/bin/g++
COLLECT_LTO_WRAPPER=/opt/wandbox/gcc-head/libexec/gcc/x86_64-pc-linux-gnu/11.0.0/lto-wrapper
Target: x86_64-pc-linux-gnu
Configured with: ../source/configure --prefix=/opt/wandbox/gcc-head --enable-languages=c,c++ --disable-multilib --without-ppl --without-cloog-ppl --enable-checking=release --disable-nls --enable-lto LDFLAGS=-Wl,-rpath,/opt/wandbox/gcc-head/lib,-rpath,/opt/wandbox/gcc-head/lib64,-rpath,/opt/wandbox/gcc-head/lib32
Thread model: posix
Supported LTO compression algorithms: zlib
gcc version 11.0.0 20200706 (experimental) (GCC)
Comment 1 David Edelsohn 2020-07-07 22:44:20 UTC
Confirmed.
Comment 2 Jakub Jelinek 2020-07-09 15:19:29 UTC
Other no_unique_address ABI issues: PR96052, PR95976
Comment 3 GCC Commits 2020-07-10 12:36:22 UTC
The releases/gcc-10 branch has been updated by Jason Merrill <jason@gcc.gnu.org>:

https://gcc.gnu.org/g:3bb330022ce47a3e8966a9930f392e497c608f59

commit r10-8456-g3bb330022ce47a3e8966a9930f392e497c608f59
Author: Jason Merrill <jason@redhat.com>
Date:   Thu Jul 9 15:11:12 2020 -0400

    c++: [[no_unique_address]] fixes. [PR96105]
    
    We were wrongly checking is_empty_class on the result of strip_array_types
    rather than the actual field type.  We weren't considering the alignment of
    the data member.  We needed to handle unions the same way as
    layout_nonempty_base_or_field.
    
    gcc/cp/ChangeLog:
    
            PR c++/96105
            PR c++/96052
            PR c++/95976
            * class.c (check_field_decls): An array of empty classes is not an
            empty data member.
            (layout_empty_base_or_field): Handle explicit alignment.
            Fix union handling.
    
    gcc/testsuite/ChangeLog:
    
            PR c++/96105
            PR c++/96052
            PR c++/95976
            * g++.dg/cpp2a/no_unique_address4.C: New test.
            * g++.dg/cpp2a/no_unique_address5.C: New test.
            * g++.dg/cpp2a/no_unique_address6.C: New test.
Comment 4 GCC Commits 2020-07-10 12:36:51 UTC
The master branch has been updated by Jason Merrill <jason@gcc.gnu.org>:

https://gcc.gnu.org/g:e47dfca5aa473e77fdff95d631dc39de87a41eec

commit r11-2014-ge47dfca5aa473e77fdff95d631dc39de87a41eec
Author: Jason Merrill <jason@redhat.com>
Date:   Thu Jul 9 15:11:12 2020 -0400

    c++: [[no_unique_address]] fixes. [PR96105]
    
    We were wrongly checking is_empty_class on the result of strip_array_types
    rather than the actual field type.  We weren't considering the alignment of
    the data member.  We needed to handle unions the same way as
    layout_nonempty_base_or_field.
    
    gcc/cp/ChangeLog:
    
            PR c++/96105
            PR c++/96052
            PR c++/95976
            * class.c (check_field_decls): An array of empty classes is not an
            empty data member.
            (layout_empty_base_or_field): Handle explicit alignment.
            Fix union handling.
    
    gcc/testsuite/ChangeLog:
    
            PR c++/96105
            PR c++/96052
            PR c++/95976
            * g++.dg/cpp2a/no_unique_address4.C: New test.
            * g++.dg/cpp2a/no_unique_address5.C: New test.
            * g++.dg/cpp2a/no_unique_address6.C: New test.
Comment 5 Jason Merrill 2020-08-04 17:36:18 UTC
Fixed for 10.2/11.